--- a/GAME MED COLLI/js/css/index.css
+++ b/GAME MED COLLI/js/css/index.css
@@ -1,108 +1,156 @@
 body{
     background-color:#79B8FD;
+    
+}
+#main {
+    display:flex;
+    flex-direction:column;
+}
+#gamecenter {
+    display: flex;
+
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    top: 35%;
+    
 }
 
-canvas {
-    height:520px; 
-    width:780px;
-    background-color: #02A0E3;
-    position: absolute;
-    top: 30%;
-    left: 30%;
+
+#game {
+    background-color: #02A0E3;;
     border:#82FAF8;
     border-radius: 30px;
-
-
+    width:90vh;
+    background-repeat: no-repeat;
+    
 }
 h1{
     color: Black; 
-    font-family: 'Trocchi', serif; 
-    font-size: 65px; 
+    font-family:'Chalkduster', 'fantasy';
+    font-size: 65px;   
     font-weight: normal; 
     line-height: 48px; 
-    margin-top: 10vh;
     text-align: center;
+    order: 1;
 }
+
 ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     overflow: hidden;
     background-color:#02A0E3;
     border-radius: 30px;
+    width: auto;
+    height: 45px;
+    order: 2;
 }
 li{
     display: flex;
-    float: left;
-    font-family: 'Trocchi', serif; 
-    font-size: 25px; 
+    justify-content:stretch;
+    font-family:'Chalkduster', 'fantasy';
     font-weight: normal; 
     color: black;
-    padding: 14px 188.7px;
+    font-size: larger;
     text-decoration: none;
-    justify-content: center;
-    text-align: center;
+    border-radius: 5px;
+    order: 3;
 }
-li:hover{
+ li:hover{
     background-color: #5bc5e9;
 }
+
+#containermenu{
+    display: flex;
+    align-content: center;
+    align-items: flex-start;
+    min-width: 100%;
+    font-size: 25px;
+    flex-direction: row;
+    justify-content: center;
+    z-index: 1;
+    order: 4;
+
+}
 #cssspill{
+    display: flex;
+    
+    background-color:#05BEE3;
+    width: 28%;
+    min-width: 28%;
+    border-radius: 1em;
+    border: solid #666 1px;
+    padding: 0.25em;
+    z-index: 1;    
+  
+    
+}
+#css1spill {    
+    display: flex;
+    
+    background-color:#05BEE3;
+    width: 20%;
+    min-width: 20%;
+    border-radius: 1em;
+    border: solid #666 1px;
+    padding: 0.25em;
+    z-index: 1;    
+
+}
+    
+#css2spill {
+    display: flex;
+    
+    background-color:#05BEE3;
+    width: 24%;
+    min-width: 24%;
+    border-radius: 1em;
+    border: solid #666 1px;
+    padding: 0.25em;
+    z-index: 1;    
+
+}
+
+
+#css3spill {
+    display: flex;
+    
+    background-color:#05BEE3;
+    width: 24%;
+    min-width: 24%;
+    border-radius: 1em;
+    border: solid #666 1px;
+    padding: 0.25em;
+    z-index: 1;    
+  
+}
+#status {
+    display: flex;
+
     position: absolute;
-    left: 50px;
-    top: 230px;
-    background-color:lightblue;
-    height:70px;
-    width: 400px;
-    font-family: 'Trocchi', serif;
+    justify-content: center;
+    align-items: center;
+    height:60px;
+    width: 500px;
+    background-color: #69D5FF;
+    justify-content: space-evenly;
+    margin: 5px; 
+
+    font-family:'Courier New', Courier, monospace;
     font-size: 30px;
-    text-align: center;
-    text-justify: center;
     border-style: solid;
     border-radius:20px;
     border-color: black;
 }
-#css1spill{
-    position: absolute;
-    left: 500px;
-    top: 230px;
-    background-color:lightblue;
-    height:auto;
-    width: 400px;
-    font-family: 'Trocchi', serif;
-    font-size: 30px;
-    text-align: center;
-    text-justify: center;
-    border-style: solid;
-    border-radius:20px;
-    border-color: black;
-}
-#css2spill{
-    position: absolute;
-    left: 950px;
-    top: 230px;
-    background-color:lightblue;
-    height:auto;
-    width: 400px;
-    font-family: 'Trocchi', serif;
-    font-size: 30px;
-    text-align: center;
-    text-justify: center;
-    border-style: solid;
-    border-radius:20px;
-    border-color: black;
-}
-#css3spill{
-    position: absolute;
-    left: 1450px;
-    top: 230px;
-    background-color:lightblue;
-    height:auto;
-    width: 400px;
-    font-family: 'Trocchi', serif;
-    font-size: 30px;
-    text-align: center;
-    text-justify: center;
-    border-style: solid;
-    border-radius:20px;
+.cssBox {
+    display: flex;
+    background-color: lightblue;
+    padding: 10px;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 20px;
+    border: 1px solid;
+    border-radius:15px;
     border-color: black;
 }
