--- a/GAME MED COLLI/js/css/index.css
+++ b/GAME MED COLLI/js/css/index.css
@@ -1,10 +1,12 @@
 body{
     background-color:#79B8FD;
+    line-height:1.6;
     
 }
 #main {
     display:flex;
     flex-direction:column;
+    align-items: center;
 }
 #gamecenter {
     display: flex;
@@ -13,118 +15,41 @@ body{
     justify-content: center;
     align-items: center;
     top: 35%;
+    width: 100%;
     
 }
 
 
 #game {
-    background-color: #02A0E3;;
+    background-image: url("single_background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     border:#82FAF8;
     border-radius: 30px;
-    width:90vh;
+    width:45%;
     background-repeat: no-repeat;
     
 }
 h1{
     color: Black; 
-    font-family:'Chalkduster', 'fantasy';
+    font-family:'Chalkduster', Fantasy ;
     font-size: 65px;   
     font-weight: normal; 
     line-height: 48px; 
     text-align: center;
     order: 1;
 }
-
-ul{
+#Tilbake{
     display: flex;
+    background-color: lightblue;
+    padding: 10px;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 20px;
+    border: 1px solid;
+    border-radius:15px;
+    border-color: black;
     justify-content: center;
-    justify-content: space-evenly;
-    align-items: center;
-    overflow: hidden;
-    background-color:#02A0E3;
-    border-radius: 30px;
-    width: auto;
-    height: 45px;
-    order: 2;
-}
-li{
-    display: flex;
-    justify-content:stretch;
-    font-family:'Chalkduster', 'fantasy';
-    font-weight: normal; 
-    color: black;
-    font-size: larger;
-    text-decoration: none;
-    border-radius: 5px;
-    order: 3;
-}
- li:hover{
-    background-color: #5bc5e9;
-}
-
-#containermenu{
-    display: flex;
-    align-content: center;
-    align-items: flex-start;
-    min-width: 100%;
-    font-size: 25px;
-    flex-direction: row;
-    justify-content: center;
-    z-index: 1;
-    order: 4;
-
-}
-#cssspill{
-    display: flex;
-    
-    background-color:#05BEE3;
-    width: 28%;
-    min-width: 28%;
-    border-radius: 1em;
-    border: solid #666 1px;
-    padding: 0.25em;
-    z-index: 1;    
-  
-    
-}
-#css1spill {    
-    display: flex;
-    
-    background-color:#05BEE3;
-    width: 20%;
-    min-width: 20%;
-    border-radius: 1em;
-    border: solid #666 1px;
-    padding: 0.25em;
-    z-index: 1;    
-
-}
-    
-#css2spill {
-    display: flex;
-    
-    background-color:#05BEE3;
-    width: 24%;
-    min-width: 24%;
-    border-radius: 1em;
-    border: solid #666 1px;
-    padding: 0.25em;
-    z-index: 1;    
-
-}
-
-
-#css3spill {
-    display: flex;
-    
-    background-color:#05BEE3;
-    width: 24%;
-    min-width: 24%;
-    border-radius: 1em;
-    border: solid #666 1px;
-    padding: 0.25em;
-    z-index: 1;    
-  
+    width: 100px;
 }
 #status {
     display: flex;
@@ -153,4 +78,7 @@ li{
     border: 1px solid;
     border-radius:15px;
     border-color: black;
+}
+#teller{
+    background-color:lightblue;
 }
