--- a/GAME MED COLLI/js/css/front.css
+++ b/GAME MED COLLI/js/css/front.css
@@ -28,11 +28,12 @@ body {
 #container div {
     padding:40px 0;
     text-align: center;
-    background-color: lightblue;
+    background-color: #4cbce4;
     font-size:30px;
     min-width: 80%;
     border-radius: 20px;
     height: 20%;
+    border: 1px solid black;
     
 }
 a{
